--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
               python-version: 3.8 #install the python needed
           - name: execute py script # run the run.py to get the latest data
             run: |
-              pip install requirements.txt
+              pip install -r requirements.txt
               python scrapper.py
             env:
               key: ${{ secrets.key }} # if run.py requires passwords..etc, set it as secret
