--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,3 @@
-argon2-cffi @ file:///C:/ci_310/argon2-cffi_1642107167485/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-attrs @ file:///opt/conda/conda-bld/attrs_1642510447205/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+selenium==4.1.0
 beautifulsoup4==4.10.0
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-brotlipy==0.7.0
-certifi==2021.10.8
-cffi @ file:///C:/ci_310/cffi_1643036627027/work
-charset-normalizer==2.0.10
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-cryptography @ file:///C:/ci/cryptography_1643209086516/work
-debugpy @ file:///C:/ci_310/debugpy_1642079916595/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints==0.3
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-importlib-resources @ file:///tmp/build/80754af9/importlib_resources_1625135880749/work
-ipykernel @ file:///C:/ci_310/ipykernel_1642119594474/work/dist/ipykernel-6.4.1-py3-none-any.whl
-ipython @ file:///C:/ci_310/ipython_1642110134841/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-jedi @ file:///C:/ci/jedi_1644315428305/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1635780242639/work
-joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1642000296051/work
-jupyter-client @ file:///opt/conda/conda-bld/jupyter_client_1643638337975/work
-jupyter-core @ file:///C:/ci_310/jupyter_core_1642174363798/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-MarkupSafe @ file:///C:/ci_310/markupsafe_1642084045935/work
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mistune @ file:///C:/ci_310/mistune_1642084168466/work
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci_310/mkl_random_1643050563308/work
-mkl-service==2.4.0
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci_310/nbconvert_1642173634377/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1642016744468/work
-numpy @ file:///C:/ci_310/numpy_and_numpy_base_1643798589088/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///D:/bld/pandas_1644670137086/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-prometheus-client @ file:///opt/conda/conda-bld/prometheus_client_1643788673601/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyrsistent @ file:///C:/ci_310/pyrsistent_1642117077485/work
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz==2021.3
-pywin32==302
-pywinpty @ file:///C:/ci_310/pywinpty_1644230983541/work/target/wheels/pywinpty-2.0.2-cp310-none-win_amd64.whl
-pyzmq @ file:///C:/ci_310/pyzmq_1642090360481/work
 requests==2.27.1
-selenium @ file:///C:/ci_310/selenium_1642091463950/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-soupsieve==2.3.1
-terminado @ file:///C:/ci/terminado_1644312135040/work
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-tornado @ file:///C:/ci_310/tornado_1642093111997/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
-urllib3 @ file:///opt/conda/conda-bld/urllib3_1643638302206/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
-wincertstore==0.2
-zipp @ file:///opt/conda/conda-bld/zipp_1641824620731/work
