--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
               python-version: 3.8 #install the python needed
           - name: execute py script # run the run.py to get the latest data
             run: |
+              google-chrome --version
+              chromedriver --version
+              pip freeze |grep selenium
               pip install -r requirements.txt
               python scrapper.py
             env:
