--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
               chromedriver --version
               pip install -r requirements.txt
               pip show selenium
+              google-chrome --headless "http://example.com"
+              echo $?
               python scrapper.py
             env:
               key: ${{ secrets.key }} # if run.py requires passwords..etc, set it as secret
